--- a/flowerapp-frontend/package.json
+++ b/flowerapp-frontend/package.json
@@ -18,11 +18,12 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
+    "underscore": "^1.10.2",
     "uuid": "^7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set INLINE_RUNTIME_CHUNK=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
