--- a/flowerapp-frontend/package.json
+++ b/flowerapp-frontend/package.json
@@ -12,6 +12,7 @@
     "aws-amplify-react": "^4.1.9",
     "axios": "^0.19.2",
     "material-ui-image": "^3.2.3",
+    "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
