--- a/flowerapp-frontend/package.json
+++ b/flowerapp-frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
+    "react-toast-notifications": "^2.4.0",
     "underscore": "^1.10.2",
     "uuid": "^7.0.3"
   },
