--- a/groups/package.json
+++ b/groups/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "postinstall": "npm rebuild node-sass",
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "nyc mocha --timeout=10000 --exit",
     "lint": "eslint \"**/*.js\""
   },
@@ -42,6 +43,7 @@
     "fbgraph": "^1.4.4",
     "fs-extended": "^0.2.1",
     "googleapis": "^47.0.0",
+    "handlebars": "^4.7.6",
     "i18n": "^0.9.1",
     "instagram-node": "^0.5.8",
     "jquery": "^3.4.1",
@@ -79,6 +81,7 @@
     "tumblr.js": "^2.0.2",
     "twilio": "^3.39.5",
     "twit": "^2.2.11",
+    "underscore": "^1.10.2",
     "uniqid": "^5.2.0",
     "validator": "^12.2.0"
   },
@@ -89,6 +92,7 @@
     "eslint-plugin-chai-friendly": "^0.5.0",
     "eslint-plugin-import": "^2.20.2",
     "mocha": "^7.1.2",
+    "nodemon": "^2.0.4",
     "nyc": "^15.0.1",
     "sinon": "^9.0.2",
     "supertest": "^5.0.0-0"
