--- a/groups/package.json
+++ b/groups/package.json
@@ -76,6 +76,7 @@
     "paypal-rest-sdk": "^1.8.1",
     "popper.js": "^1.16.1",
     "pug": "^2.0.4",
+    "request": "^2.88.2",
     "simple-encryptor": "^3.0.0",
     "stripe": "^8.22.0",
     "tumblr.js": "^2.0.2",
@@ -96,9 +97,5 @@
     "nyc": "^15.0.1",
     "sinon": "^9.0.2",
     "supertest": "^5.0.0-0"
-  },
-  "engines": {
-    "node": ">=10.19.0",
-    "npm": ">=6.13.4"
   }
 }
