--- a/flowerapp-backend/package.json
+++ b/flowerapp-backend/package.json
@@ -2,16 +2,19 @@
   "name": "flowerapp-backend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts":{
+  "scripts": {
     "start": "nodemon index.js"
   },
   "author": "Rashid Ahmad",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.3",
+    "recaptcha-verify": "^0.1.1",
+    "request": "^2.88.2",
     "stripe": "^8.44.0",
     "uuid": "^7.0.3"
   }
