--- a/flowerapp-frontend/package.json
+++ b/flowerapp-frontend/package.json
@@ -24,9 +24,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.0",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1",
     "react-stripe-checkout": "^2.6.3",
     "react-toast-notifications": "^2.5.1",
     "underscore": "^1.13.6",
